fix added onclick to visible spinner [TAXIT-22]

--- a/src/components/spinner/ProgressSpinner.module.css
+++ b/src/components/spinner/ProgressSpinner.module.css
@@ -6,10 +6,6 @@
   left: 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 20;
-  display: none;
-}
-
-.spinner__container_active {
   display: flex;
   justify-content: center;
   align-items: center;
